@@ -25,6 +25,8 @@
 
 #include "../Orthanc/Core/OrthancException.h"
 
+#include <boost/regex.hpp>
+
 namespace OrthancPlugins
 {
   bool SeriesInformationAdapter::Create(std::string& content,
@@ -33,10 +35,11 @@ namespace OrthancPlugins
     std::string message = "Ordering instances of series: " + seriesId;
     OrthancPluginLogInfo(context_, message.c_str());
 
-    Json::Value series, study, patient;
+    Json::Value series, study, patient, ordered;
     if (!GetJsonFromOrthanc(series, context_, "/series/" + seriesId) ||
         !GetJsonFromOrthanc(study, context_, "/studies/" + series["ID"].asString() + "/module?simplify") ||
         !GetJsonFromOrthanc(patient, context_, "/studies/" + series["ID"].asString() + "/module-patient?simplify") ||
+        !GetJsonFromOrthanc(ordered, context_, "/series/" + series["ID"].asString() + "/ordered-slices") ||
         !series.isMember("Instances") ||
         series["Instances"].type() != Json::arrayValue)
     {
@@ -49,6 +52,25 @@ namespace OrthancPlugins
     result["StudyDescription"] = study["StudyDescription"].asString();
     result["PatientID"] = patient["PatientID"].asString();
     result["PatientName"] = patient["PatientName"].asString();
+    result["Type"] = ordered["Type"];
+    result["Slices"] = ordered["Slices"];
+
+    boost::regex pattern("^/instances/([a-f0-9-]+)/frames/([0-9]+)$");
+
+    for (Json::Value::ArrayIndex i = 0; i < result["Slices"].size(); i++)
+    {
+      boost::cmatch what;
+      if (regex_match(result["Slices"][i].asCString(), what, pattern))
+      {
+        result["Slices"][i] = std::string(what[1]) + "_" + std::string(what[2]);
+      }
+      else
+      {
+        return false;
+      }
+    }
+
+#if 0
     result["SortedInstances"] = Json::arrayValue;
 
     SeriesVolumeSorter sorter;
@@ -73,6 +95,10 @@ namespace OrthancPlugins
     {
       result["SortedInstances"].append(sorter.GetInstance(i));
     }
+
+    std::cout << result.toStyledString();
+
+#endif
 
     content = result.toStyledString();
 
