@@ -42,12 +42,12 @@ namespace OrthancPlugins
     Json::Value json;
     Json::Reader reader;
     if (!reader.parse(content, json) ||
-        !json.isMember("SortedInstances"))
+        !json.isMember("Slices"))
     {
       return;
     }
 
-    const Json::Value& instances = json["SortedInstances"];
+    const Json::Value& instances = json["Slices"];
     if (instances.type() != Json::arrayValue)
     {
       return;
@@ -76,6 +76,8 @@ namespace OrthancPlugins
     std::string compression = path.substr(0, separator + 1);
     std::string instanceId = path.substr(separator + 1);
 
+    instanceId = instanceId.substr(0, instanceId.find('_'));
+
     Json::Value instance;
     if (!GetJsonFromOrthanc(instance, context_, "/instances/" + instanceId) ||
         !instance.isMember("ParentSeries"))
@@ -92,12 +94,12 @@ namespace OrthancPlugins
     Json::Value series;
     Json::Reader reader;
     if (!reader.parse(tmp, series) ||
-        !series.isMember("SortedInstances"))
+        !series.isMember("Slices"))
     {
       return;
     }
 
-    const Json::Value& instances = series["SortedInstances"];
+    const Json::Value& instances = series["Slices"];
     if (instances.type() != Json::arrayValue)
     {
       return;
