@@ -5,9 +5,10 @@ Pending changes in the mainline
 
 * The GDCM decoder replaces the built-in Orthanc decoder
 
-TODO : Use "/series/ordered-slices"
 TODO : Support cine and multi-frame images
 TODO : Interpolation does not work, at least with Firefox
+TODO : Remove CacheBundle_InstanceInformation
+TODO : ViewerPrefetchPolicy::ApplyInstance => problem in prefetching, seems down
 
 
 Version 1.3 (2015-11-27)
